chore(init): Puck Hero

--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "${PROJECT_NAME}",
+  "name": "puck-hero",
   "version": "1.0.0",
-  "description": "",
+  "description": "puuk hero",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "private": true
+  "private": true,
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.21.2",
+    "ws": "^8.18.0"
+  }
 }
